# document-agent

./: .env.example  .gitignore  LICENSE  README.md  agent.py  document_agent.py  pyproject.toml  requirements.txt  setup.sh
evals/: eval_results.json  research_eval_results.json  sonnet_eval_results_advanced.json
examples/: eval_document_agent.py  eval_research_with_judge.py  eval_with_judge.py  example_research_agent.py  test_research_fix.py  test_research_fixes.py  test_simple_research.py
tests/: README.md  run_all_tests.py  test_agent_integration.py  test_basic_tools.py  test_message_handling.py
tools/: __init__.py  agent_tool.py  anthropic_web_tool.py  bash_enhanced.py  calculator.py  file_tools.py  git_tool.py  image_tool.py  multi_edit.py  notebook_tool.py  research_lead_tool.py  research_tools.py  system_tools.py  text_transform.py  think.py  weather.py  web_tool.py
utils/: history_util.py  tool_util.py
